--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.4.1",
-    "nodemon": "^2.0.20",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
